[gd_scene load_steps=7 format=3 uid="uid://dw0h7ydiceib4"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_xjfy3"]
[ext_resource type="PackedScene" uid="uid://6q71hhhis5j0" path="res://scenes/Button.tscn" id="2_pyjwg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0ifi"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7jjok"]
bg_color = Color(0.180392, 0.129412, 0.129412, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.211765, 0.239216, 0.290196, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wpsj"]
bg_color = Color(0.25098, 0.180392, 0.180392, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2628, 0.29682, 0.36, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y0ja2"]
bg_color = Color(0.321569, 0.231373, 0.231373, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3139, 0.35647, 0.43, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xjfy3")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s0ifi")
metadata/_edit_lock_ = true

[node name="TopContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 104.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TopContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Logic Workbench"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Label_2" type="RichTextLabel" parent="TopContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]A Logic Simulator made by [u]Lime Inc[/u] using [u]Godot 4.2[/u]"
fit_content = true
meta_underlined = false
hint_underlined = false
metadata/_edit_lock_ = true

[node name="ButtonHolder" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -456.0
offset_right = 256.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="ContinueButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
visible = false
layout_mode = 2
disabled = true
text = "Continue Project"
button_up_func = false
change_scene = true

[node name="LoadButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
visible = false
layout_mode = 2
disabled = true
text = "Load Project"
button_up_func = false
change_scene = true

[node name="NewButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
visible = false
layout_mode = 2
text = "New Project"
button_up_func = false
change_scene = true

[node name="CancelButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
visible = false
layout_mode = 2
text = "Cancel"
button_up_func = false
change_scene = true

[node name="PlayButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
layout_mode = 2
text = "Play
"
button_up_func = false
change_scene = true

[node name="SettingsButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
layout_mode = 2
text = "Settings"
button_up_func = false
change_scene = true

[node name="TutorialButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
layout_mode = 2
text = "Tutorial"
button_up_func = false
change_scene = true

[node name="CreditsButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
layout_mode = 2
text = "Credits"
button_up_func = false
change_scene = true

[node name="QuitButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7jjok")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wpsj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y0ja2")
text = "Quit"

[node name="ConfirmQuitButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
visible = false
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_7jjok")
theme_override_styles/hover = SubResource("StyleBoxFlat_2wpsj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_y0ja2")
text = "Quit"
button_up_func = false
change_scene = true

[node name="CancelQuitButton" parent="ButtonHolder" instance=ExtResource("2_pyjwg")]
visible = false
layout_mode = 2
text = "Cancel"

[connection signal="activated" from="ButtonHolder/NewButton" to="." method="_on_new_button_activated"]
[connection signal="activated" from="ButtonHolder/CancelButton" to="." method="_on_cancel_button_activated"]
[connection signal="activated" from="ButtonHolder/PlayButton" to="." method="_on_play_button_activated"]
[connection signal="activated" from="ButtonHolder/SettingsButton" to="." method="_on_settings_button_activated"]
[connection signal="activated" from="ButtonHolder/TutorialButton" to="." method="_on_tutorial_button_activated"]
[connection signal="activated" from="ButtonHolder/CreditsButton" to="." method="_on_credits_button_activated"]
[connection signal="activated" from="ButtonHolder/QuitButton" to="." method="_on_quit_button_activated"]
[connection signal="activated" from="ButtonHolder/ConfirmQuitButton" to="." method="_on_confirm_quit_button_activated"]
[connection signal="activated" from="ButtonHolder/CancelQuitButton" to="." method="_on_cancel_quit_button_activated"]
